# digital-image-processing

Image And Video Processing/: link.txt
Image And Video Processing/Lab/Lab01/: TemplateCode_Lab01.rar
Image And Video Processing/Lab/Lab01/TemplateCode_Lab01/: ColorTransformer.h  Converter.h
Image And Video Processing/Lab/Lab01/demo_cmake/: CMakeLists.txt  main.cpp
Image And Video Processing/Lab/Lab01/exercise01/: CMakeLists.txt  ColorTransformer.cpp  ColorTransformer.h  Converter.cpp  Converter.h  main.cpp
Image And Video Processing/Lab/Lab01/lab01/: CMakeLists.txt  ColorTransformer.cpp  ColorTransformer.h  Converter.cpp  Converter.h  main.cpp  readme.txt
Image And Video Processing/Lab/Lab02/: TemplateCodeLab02.rar
Image And Video Processing/Lab/Lab03/: TemplateCodeLab03.rar
Image And Video Processing/Lab/Lab03/exercise/: Blur.cpp  Blur.h  CMakeLists.txt  Convolution.cpp  Convolution.h  EdgeDetector.cpp  EdgeDetector.h  main.cpp
Image And Video Processing/Lab/Lab04/: TemplateCodeLab04.rar
Image And Video Processing/Lab/Lab05/: TemplateCodeLab05.rar
Image And Video Processing/Lab/OpenCVExample/: OpenCVExample.sln
Image And Video Processing/Paper/: project.ppt
Image And Video Processing/Slides/: notes
Image And Video Processing/Sobel/: sobel_operator.py
Image And Video Processing/Translate paper/: 4. Description of Centent Features.docx  Chuong2.docx  Chuong7_8_18424016_18424057.docx  Paper - Content-based Image Retrieval at the End of The Early Years.docx  Phan3_CuongPhan.docx  chuong 1_2.docx
(+9 files in other folders)
