cmake_minimum_required(VERSION 3.0.0) 
project(lab03 VERSION 0.1.0)
include(CTest)
enable_testing()
add_executable(lab03 main.cpp Blur.h Blur.cpp Convolution.h Convolution.cpp)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
set(CMAKE_CXX_STANDARD 14)
set(OpenCV_DIR /usr/local/include/opencv4)
find_package( OpenCV REQUIRED )
target_link_libraries(lab03 ${OpenCV_LIBS} )
include(CPack)